# signate_cup_2024

./: .gitignore  README.md  main.py  preprocess.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
models/: CatBoostModel.py  LightGBMClassifier.py
notebook/: eda.ipynb
