[tool.poetry]
name = "signate-cup-2024"
version = "0.1.0"
description = ""
authors = ["cotora"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kanjize = "^1.5.0"
pandas = "^2.2.2"
pandas-stubs = "^2.2.2.240807"
scikit-learn = "^1.5.1"
lightgbm = "^4.5.0"
matplotlib = "^3.9.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
